kubefiles/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-app
  labels:
    name: finance-app
    istio-injection: enabled
